search btn text overflow fix

--- a/src/css/scss/components/custom/_directory-page.scss
+++ b/src/css/scss/components/custom/_directory-page.scss
@@ -108,7 +108,7 @@
 	--input-padding: 10px 15px 10px 25px;
 	--input-bg: #{$white};
 	--submit-border-radius: 0 40px 40px 0;
-	--submit-button-width: 70px;
+	--submit-button-width: 105px;
 	--submit-button-bg: #{$purplish-red};
 	--submit-button-hover-bg: #{darken($purplish-red,5%)};
 	--submit-button-color: #{$white};
